tests/res/traits/error_trait_field.say
// Traits are stateless: a trait may not declare a field.
trait Counter {
    count = 0; // error: A trait cannot declare fields; `req` the state it needs and let the host type hold it
}
